[package]
name = "yubotp"
version = "0.1.0"
authors = [
    "Alessio Di Mauro <alessio@alessiodimauro.com>",
    "Alessandro Carlo Chirico <alessandro.carlo@chiri.co>"
]
edition = "2018"

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
actix-web = { version = "4.0.1", features = ["openssl"] }
awc = { version = "3.0.0", features = ["openssl"] }
base64 = "0.13.0"
bytes = "1.1.0"
config = "0.13.1"
env_logger = "0.9.0"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.16"
rand = "0.8.5"
regex = "1.5.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha-1 = "0.10.0"
sha2 = "0.10.2"
tokio = "1.17.0"
