[package]
name = "yubotp"
version = "0.1.0"
authors = [
    "Alessio Di Mauro <alessio@alessiodimauro.com>",
    "Alessandro Carlo Chirico <alessandro.carlo@chiri.co>"
]
edition = "2018"

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
actix-web = { version = "4.2.1", features = ["openssl"] }
awc = { version = "3.0.1", features = ["openssl"] }
base64 = "0.21.0"
bytes = "1.3.0"
config = "0.13.3"
env_logger = "0.10.0"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
regex = "1.7.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
sha-1 = "0.10.1"
sha2 = "0.10.6"
tokio = "1.24.2"
